<resources>
    <string name="app_name">My rickshaw</string>


    <string name="home">Home</string>
    <string name="myChild">My Child</string>
    <string name="notification">Notification</string>
    <string name="setting">Setting</string>

    <string name="logIn">Login</string>
    <string name="logOut">Log Out</string>
    <string name="welcome_please_provide_your_basic_details_to_get_into_my_rickshaw">Welcome, Please provide your basic details to get into My Rickshaw</string>
    <string name="enterPassword">Enter Password</string>
    <string name="enterNumber">Enter Number</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="invalid_number">Invalid mobile number</string>
    <string name="please_enter_number">Please enter number</string>
    <string name="please_enter_new_pass">Please enter new password</string>
    <string name="please_enter_confirm_pass">Please enter confirm password</string>
    <string name="password_invalid">old password must be 8 character</string>
    <string name="new_password_invalid">new password must be 8 character</string>
    <string name="confirm_password_invalid">confirm password must be 8 character</string>
    <string name="password_not_match_change_pass">new password and confirm password not match</string>
    <string name="please_enter_old_pass">Please enter old password</string>
    <string name="password_not_match">Password does\'t match</string>
    <string name="forgotPassword"><u>Forgot Password?</u></string>
    <string name="forgotPasswordTitle">Forgot Password</string>
    <string name="tittle">Tittle</string>
    <string name="forgotSubMessage">Please provide us your basic details below and get into the system</string>
    <string name="submit">Submit</string>
    <string name="hey_parent">Hey Parent</string>
    <string name="home_subTitle">Let\'s Keep Track of \nyour Child</string>
    <string name="newPassword">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset">Reset</string>
    <string name="old_password">Old Password</string>
    <string name="update_password">Update Password</string>
    <string name="change_password">Change Password</string>
    <string name="contact_us">Contact Us</string>
    <string name="yourName">Your Name</string>
    <string name="write_your_message_here">Write your message here</string>
    <string name="enter_message">Please enter message </string>
    <string name="delete_account">Delete Account</string>
    <string name="wasilij_smith">Wasilij Smith</string>
    <string name="wasilijsmith_gmail_com">WasilijSmith@gmail.com</string>
    <string name="_123_521_512">123 521 512</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="back">Back</string>
    <string name="do_you_really_want_to_logout_from_my_rickshaw_app">Do you really want to Logout from My Rickshaw App?</string>
    <string name="are_you_sure">Are you Sure?</string>
    <string name="search_by_child">Search by Child</string>
    <string name="faqs">FAQs</string>
    <string name="in_school">In School</string>
    <string name="track">Track</string>
    <string name="charlie_smith">Charlie Smith</string>
    <string name="holsworthy_public_school">Holsworthy Public School</string>
    <string name="class_5e">Class - 5E</string>
    <string name="delete">Delete</string>
    <string name="reason_for_account_deletion">Reason for account deletion</string>
    <string name="do_you_really_want_to_delete_your_my_rickshaw_account">Do you really want to Delete Your My Rickshaw account?</string>
    <string name="in_a_bus">In a Bus</string>
    <string name="home_pick_up">Home Pick Up</string>
    <string name="_255_pitt_st_sydney_nsw_2000">255 Pitt St, Sydney NSW 2000</string>
    <string name="_07_35_am">07:35 AM</string>
    <string name="select_option">Select option</string>
    <string name="take_from_camera">Take from Camera</string>
    <string name="select_from_gallery">Select from Gallery</string>
    <string name="_00_00">00:00</string>
    <string name="eta_to_reach_home_12_10_pm">ETA to Reach Home - 12:10 PM</string>
    <string name="bad_request">Bad Request</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="forbidden">Forbidden</string>
    <string name="not_found">Not Found</string>
    <string name="method_not_allowed">Method Not Allowed</string>
    <string name="conflict">Conflict</string>
    <string name="unprocessable_entity">Unprocessable Entity</string>
    <string name="internal_server_error">Internal Server Error</string>
    <string name="bad_gateway">Bad Gateway</string>
    <string name="service_unavailable">Service Unavailable</string>
    <string name="gateway_timeout">Gateway Timeout</string>
    <string name="unknown">Unknown</string>
    <string name="otpVerify">Otp Verification</string>
    <string name="noInternet">Internet connection not available</string>
    <string name="not_receive_otp">Didn\'t receive code?</string>
    <string name="resend_under_line"><u>Resend</u></string>
    <string name="otpSubTittle">Enter the 4 digit verification code received</string>
    <string name="verificationCode">Verification Code</string>
    <string name="permission">Please allow permission other wise not work this feature</string>
    <string name="please_enter_otp">Please enter otp</string>
    <string name="otp_does_not_match">otp does not match</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="no_notification_found">No notification found</string>
    <string name="no_faqs_found">No FAQs found</string>
    <string name="update">Update</string>
    <string name="open_setting">Open Setting</string>
    <string name="ok">OK</string>
    <string name="maintenance">Maintenance</string>
    <string name="cancel">Cancel</string>
    <string name="setting_des">Please allow storage and camara permission in app setting</string>
    <string name="no_data_found">No child found</string>
    <string name="wrong">Some thing went to wrong</string>
    <string name="allowImageTitle">Choose Image</string>
    <string name="allowImageMsg">Please allow limited image access for this app</string>
    <string name="setting_des_notification">Please allow notification permission in app setting</string>
    <string name="allowNotification">Please allow push notification permission otherwise this application will not work.</string>
    <string name="denied_location_permission">You\'ve denied location permission. Please go to settings to enable it.</string>
    <string name="default_notification_channel_id">MyRickshawSchool</string>
    <string name="session_expired">Session Expired</string>
    <string name="session_expired_message">Your session is expired</string>
</resources>