<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.app.myrickshawparent.ui.login.LoginViewModel" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".ui.login.LoginActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/home_bg_gradient">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgLogin"
                android:layout_width="@dimen/dimens50dp"
                android:layout_height="@dimen/dimens60dp"
                android:layout_marginStart="@dimen/margin_padding_24dp"
                android:layout_marginTop="@dimen/dimens84dp"
                android:src="@drawable/login_img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTittle"
                android:layout_width="@dimen/dimens0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_padding_24dp"
                android:layout_marginTop="@dimen/dimens32dp"
                android:fontFamily="@font/itc_avant_garade_std_bold"
                android:text="@string/logIn"
                android:textColor="@color/textColor"
                android:textSize="@dimen/dimens24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgLogin" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvMessage"
                android:layout_width="@dimen/dimens0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimens24dp"
                android:layout_marginTop="@dimen/dimens12dp"
                android:layout_marginEnd="@dimen/dimens60dp"
                android:fontFamily="@font/itc_avant_garade_std_md"
                android:text="@string/welcome_please_provide_your_basic_details_to_get_into_my_rickshaw"
                android:textColor="@color/grayLight"
                android:textSize="@dimen/dimens14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTittle" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimens24dp"
                android:layout_marginTop="@dimen/dimens60dp"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMessage">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edt_background"
                    android:drawableEnd="@drawable/phone_selector"
                    android:hint="@string/enterNumber"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="@integer/mobile_max_length"
                    android:maxLines="1"
                    android:padding="16dp"
                    android:text="@={viewModel.number}"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/dimens16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilpassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="@dimen/dimens18dp"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilNumber">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edt_background"
                    android:drawableEnd="@drawable/password_selector"
                    android:hint="@string/enterPassword"
                    android:imeOptions="actionDone"
                    android:maxLines="@integer/password_max_length"
                    android:padding="@dimen/dimens16dp"
                    android:singleLine="true"
                    android:text="@={viewModel.passsword}"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/dimens16sp"
                    app:hintEnabled="false" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvForgetPass"
                android:layout_width="@dimen/dimens0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens24dp"
                android:fontFamily="@font/itc_avant_garade_std_md"
                android:text="@string/forgotPassword"
                android:textAlignment="textEnd"
                android:textColor="@color/textColor"
                android:textSize="@dimen/dimens14sp"
                app:layout_constraintEnd_toEndOf="@+id/tilpassword"
                app:layout_constraintStart_toStartOf="@+id/tilpassword"
                app:layout_constraintTop_toBottomOf="@+id/tilpassword" />

            <com.app.myrickshawparent.ui.view.CustomButton
                android:id="@+id/btnLogin"
                android:layout_width="@dimen/dimens0dp"
                android:layout_height="@dimen/dimens60dp"
                android:layout_marginHorizontal="@dimen/dimens24dp"
                android:layout_marginTop="@dimen/margin_padding_20dp"
                android:layout_marginBottom="@dimen/dimens20dp"
                android:backgroundTint="@color/yellow"
                android:onClick="@{() -> viewModel.login()}"
                android:textSize="@dimen/dimens16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvForgetPass"
                app:layout_constraintVertical_bias="1.0"
                app:title="@string/logIn" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>