<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimens24dp"
        android:background="@color/transparent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/outer_dialog_bg"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/dialog_bg"
                android:paddingTop="21dp"
                android:paddingBottom="21dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.333"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvTitle"
                    style="@style/GrayRegular14"
                    android:layout_width="@dimen/dimens0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="@dimen/dimens16dp"
                    android:layout_marginBottom="@dimen/dimens20dp"
                    android:text="@string/are_you_sure"
                    android:textAlignment="center"
                    android:textSize="@dimen/dimens16sp"
                    app:layout_constraintBottom_toTopOf="@id/line"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <View
                    android:id="@+id/line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="18dp"
                    android:background="@color/white"
                    android:backgroundTint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTitle" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvMesage"
                    android:layout_width="@dimen/dimens0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimens38dp"
                    android:layout_marginTop="@dimen/dimens18dp"
                    android:layout_marginEnd="@dimen/dimens58dp"
                    android:layout_marginBottom="@dimen/dimens21dp"
                    android:fontFamily="@font/itc_avant_garade_std_md"
                    android:text="@string/do_you_really_want_to_logout_from_my_rickshaw_app"
                    android:textAlignment="center"
                    android:textSize="@dimen/dimens14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/line" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <com.app.myrickshawparent.ui.view.CustomButton
                android:id="@+id/btnBack"
                android:layout_width="0dp"
                android:layout_height="@dimen/dimens60dp"
                android:layout_marginStart="@dimen/dimens12dp"
                android:textSize="@dimen/dimens16sp"
                app:border_width="@dimen/dimens1dp"
                app:button_background="@color/transparent"
                app:button_text_style="@style/ButtonStyleCustom14"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnLogout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/constraintLayout"
                app:title="@string/back" />

            <com.app.myrickshawparent.ui.view.CustomButton
                android:id="@+id/btnLogout"
                android:layout_width="0dp"
                android:layout_height="@dimen/dimens60dp"
                android:layout_marginStart="@dimen/dimens7dp"
                android:layout_marginEnd="@dimen/dimens12dp"
                android:textSize="@dimen/dimens16sp"
                app:button_background="@color/yellow"
                app:button_text_style="@style/ButtonStyleCustom14"
                app:layout_constraintBottom_toBottomOf="@+id/btnBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnBack"
                app:layout_constraintTop_toTopOf="@+id/btnBack"
                app:title="@string/logOut" />


            <View
                android:id="@+id/lineBottom"
                android:layout_width="135dp"
                android:layout_height="5dp"
                android:layout_marginTop="29dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rectangle_line_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnBack" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>