<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.app.myrickshawparent.ui.forgotpass.ForgotPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/home_bg_gradient"
        tools:context=".ui.forgotpass.ForgotPasswordActivity">

        <include
            android:id="@+id/header"
            layout="@layout/header_with_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvMessage"
                    android:layout_width="@dimen/dimens0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimens24dp"
                    android:layout_marginTop="@dimen/dimens16dp"
                    android:layout_marginEnd="@dimen/dimens70dp"
                    android:fontFamily="@font/itc_avant_garade_std_md"
                    android:text="@string/forgotSubMessage"
                    android:textColor="@color/grayLight"
                    android:textSize="@dimen/dimens14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimens24dp"
                    android:layout_marginTop="@dimen/dimens40dp"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvMessage">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edt_background"
                        android:drawableEnd="@drawable/phone_selector"
                        android:hint="@string/enterNumber"
                        android:maxLength="@integer/mobile_max_length"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLines="1"
                        android:text="@={viewModel.number}"
                        android:padding="16dp"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.app.myrickshawparent.ui.view.CustomButton
                    android:id="@+id/btnSubmit"
                    android:layout_width="@dimen/dimens0dp"
                    android:layout_height="@dimen/dimens60dp"
                    android:layout_marginHorizontal="@dimen/dimens24dp"
                    android:layout_marginTop="@dimen/margin_padding_20dp"
                    android:layout_marginBottom="@dimen/dimens20dp"
                    android:backgroundTint="@color/yellow"
                    android:textSize="@dimen/dimens16sp"
                    android:onClick="@{() -> viewModel.forgotApi()}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tilNumber"
                    app:layout_constraintVertical_bias="1.0"
                    app:title="@string/submit" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>